Added: 7 more pages

--- a/fgtpswd.html
+++ b/fgtpswd.html
@@ -27,7 +27,7 @@
                 <img src="img/tile-wide.png" width="285" height="47" alt="">
             </div>
             <ul id="login-signup">
-                <li>Login | <a href="signup.html">Signup</a></li>
+                <li><a href="index.html">Login</a> | <a href="signup.html">Signup</a></li>
             </ul>
         </div>
         
@@ -35,34 +35,23 @@
             <p>ONLINE JUDGE</p>
         </nav>
 
+        <p>An email with reset link will be sent to you, if you are already registered.</p>
         <div id="credentials-box">
             <div id="cred-header">Enter Your Credentials</div>
             <div id="cred-body">
                 <form method="post" action="/">
                     <div class="field">
                         <div class="name">
-                            <label for="usernameOrEmail">Username/Email</label>
+                            <label for="email">Email</label>
                         </div>
                         <div class="value">
-                            <input id="usernameOrEmail" name="usernameOrEmail" value="">
-                        </div>
-                    </div>
-                    <div class="field">
-                        <div class="name">
-                            <label for="password">Password</label>
-                        </div>
-                        <div class="value">
-                            <input id="password" type="password" name="password" value="">
+                            <input id="email" name="email" value="">
                         </div>
                     </div>
                     <div class="button-field">
-                        <!-- <input type="submit" value="Login"> -->
-                        <a href="contests.html"><button type="button">Login</button></a>
+                        <input type="submit" value="Enter">
                     </div>
                 </form>
-                <div class="forgotPassword">
-                    <a href="fgtpswd.html">Forgot your password?</a>
-                </div>
             </div>
         </div>
 
