--- a/signup.html
+++ b/signup.html
@@ -24,24 +24,64 @@
    <div id="container">
         <div id="header">
             <div id="logo">
-                <img src="img/logo.png" " alt="">
+                <img src="img/tile-wide.png" width="285" height="47" alt="">
             </div>
             <ul id="login-signup">
-                <li><a href="#">Login</a> | <a href="#">Signup</a></li>
+                <li><a href="index.html">Login</a> | Signup </li>
             </ul>
         </div>
         
         <nav id="header-nav">
-            <ul>
-                <li>Contests</li>
-                <li>Problems</li>
-                <li>LeaderBoard</li>
-                <li>Submissions</li>
-                <li>Submit</li>
-            </ul>
+            <p>ONLINE JUDGE</p>
         </nav>
+
+        <p>Fill the form to register here.</p>
+        <div id="credentials-box">
+            <div id="cred-header">Enter Your Details</div>
+            <div id="cred-body">
+                <form method="post" action="/">
+                    <div class="field">
+                        <div class="name">
+                            <label for="name">Name</label>
+                        </div>
+                        <div class="value">
+                            <input id="name" name="name" value="">
+                        </div>
+                        <div class="name">
+                            <label for="username">Username</label>
+                        </div>
+                        <div class="value">
+                            <input id="username" name="username" value="">
+                        </div>
+                        <div class="name">
+                            <label for="email">Email</label>
+                        </div>
+                        <div class="value">
+                            <input id="email" name="email" value="">
+                        </div>
+                        <div class="name">
+                            <label for="password">Password</label>
+                        </div>
+                        <div class="value">
+                            <input id="password" type="password" name="password" value="">
+                        </div>
+                        <div class="name">
+                            <label for="cnfpassword">Confirm Password</label>
+                        </div>
+                        <div class="value">
+                            <input id="cnfpassword" type="password" name="cnfpassword" value="">
+                        </div>
+                    </div>
+                    <div class="button-field">
+                        <input type="submit" value="Signup">
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <p align="center">Already have an account? <a href="index.html">Login</a>.</p>
         <footer>
-            © 2020 by Unknown
+            Online Judge © 2020 by Unknown
             <div>
                 <p>
                     <script type="text/javascript">
@@ -60,6 +100,8 @@
             </div>
         </footer>
    </div>
+
+
 
 
 
