Added: questions page and some tweaks

--- a/fgtpswd.html
+++ b/fgtpswd.html
@@ -32,20 +32,20 @@
         </div>
         
         <nav id="header-nav">
-            <p>ONLINE JUDGE</p>
+            <p>WELCOME TO THE ONLINE JUDGE</p>
         </nav>
 
         <p>An email with reset link will be sent to you, if you are already registered.</p>
         <div id="credentials-box">
             <div id="cred-header">Enter Your Credentials</div>
             <div id="cred-body">
-                <form method="post" action="/">
+                <form name="fgtpswd" method="post" action="/">
                     <div class="field">
                         <div class="name">
                             <label for="email">Email</label>
                         </div>
                         <div class="value">
-                            <input id="email" name="email" value="">
+                            <input id="email" name="email" value="" required>
                         </div>
                     </div>
                     <div class="button-field">
