--- a/problems.html
+++ b/problems.html
@@ -54,20 +54,36 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><a href="#" >A</a></td>
-                            <td><a href="#" >Anbdsfs</a></td>
+                            <td><a href="question.html" >A</a></td>
+                            <td><a href="question.html" >Anbdsfs</a></td>
                         </tr>
                         <tr>
-                            <td><a href="#" >A</a></td>
-                            <td><a href="#" >Anbdsfs</a></td>
+                            <td><a href="question.html" >A</a></td>
+                            <td><a href="question.html" >Anbdsfs</a></td>
                         </tr>
                         <tr>
-                            <td><a href="#" >A</a></td>
-                            <td><a href="#" >Anbdsfs</a></td>
+                            <td><a href="question.html" >A</a></td>
+                            <td><a href="question.html" >Anbdsfs</a></td>
                         </tr>
                         <tr>
-                            <td><a href="#" >A</a></td>
-                            <td><a href="#" >Anbdsfs</a></td>
+                            <td><a href="question.html" >A</a></td>
+                            <td><a href="question.html" >Anbdsfs</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="question.html" >A</a></td>
+                            <td><a href="question.html" >Anbdsfs</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="question.html" >A</a></td>
+                            <td><a href="question.html" >Anbdsfs</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="question.html" >A</a></td>
+                            <td><a href="question.html" >Anbdsfs</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="question.html" >A</a></td>
+                            <td><a href="question.html" >Anbdsfs</a></td>
                         </tr>
                     </tbody>
                 </table>
