--- a/submit.html
+++ b/submit.html
@@ -43,12 +43,11 @@
 
     <div id="middle">
         <main>
-            <form class="submit-form" method="POST" action="">
+            <form name="submit" class="submit-form" method="POST" action="">
                 <div id="submitpage-problemindex">
                     <label for="problemIndex">Problem:</label>
                     <div class="submitpage-value">
                         <select id="problemIndex" name="problemIndex">
-                            <option value=""></option>
                             <option value="A">fdgfgjk</option>
                             <option value="A">fdgfgjk</option>
                             <option value="A">fdgfgjk</option>
@@ -61,7 +60,6 @@
                     <label for="languageIndex">Language:</label>
                     <div class="submitpage-value">
                         <select id="languageIndex" name="languageIndex">
-                            <option value=""></option>
                             <option value="A">fdgfgjk</option>
                             <option value="A">fdgfgjk</option>
                             <option value="A">fdgfgjk</option>
@@ -73,7 +71,7 @@
                 <div id="submitpage-sourcefield">
                     <label for="source">Source:</label>
                     <div>
-                        <textarea id="source" name="source" rows="20"></textarea>
+                        <textarea id="source" name="source" rows="20" required></textarea>
                     </div>
                 </div>
                 <div class="submitpage-submitfield">
