--- a/signup.html
+++ b/signup.html
@@ -32,44 +32,44 @@
         </div>
         
         <nav id="header-nav">
-            <p>ONLINE JUDGE</p>
+            <p>WELCOME TO THE ONLINE JUDGE</p>
         </nav>
 
         <p>Fill the form to register here.</p>
         <div id="credentials-box">
             <div id="cred-header">Enter Your Details</div>
             <div id="cred-body">
-                <form method="post" action="/">
+                <form name="signup" method="post" action="/">
                     <div class="field">
                         <div class="name">
                             <label for="name">Name</label>
                         </div>
                         <div class="value">
-                            <input id="name" name="name" value="">
+                            <input id="name" name="name" minlength="4" maxlength="50" value="" required>
                         </div>
                         <div class="name">
                             <label for="username">Username</label>
                         </div>
                         <div class="value">
-                            <input id="username" name="username" value="">
+                            <input id="username" name="username" minlength="8" maxlength="32" value="" required>
                         </div>
                         <div class="name">
                             <label for="email">Email</label>
                         </div>
                         <div class="value">
-                            <input id="email" name="email" value="">
+                            <input id="email" name="email" value="" required>
                         </div>
                         <div class="name">
                             <label for="password">Password</label>
                         </div>
                         <div class="value">
-                            <input id="password" type="password" name="password" value="">
+                            <input id="password" type="password" name="password" title="Password must be 8 characters including 1 uppercase letter, 1 lowercase letter and numeric characters" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" value="" required>
                         </div>
                         <div class="name">
                             <label for="cnfpassword">Confirm Password</label>
                         </div>
                         <div class="value">
-                            <input id="cnfpassword" type="password" name="cnfpassword" value="">
+                            <input id="cnfpassword" type="password" name="cnfpassword" title="Password must be 8 characters including 1 uppercase letter, 1 lowercase letter and numeric characters" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" value="" required>
                         </div>
                     </div>
                     <div class="button-field">
